--- a/po/de.po
+++ b/po/de.po
@@ -5,15 +5,19 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2013-11-09 14:15+CET\n"
+"POT-Creation-Date: 2013-11-09 17:09+CET\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: ENCODING\n"
 "Generated-By: pygettext.py 1.5\n"
 
+#: ../mCommon.py:339 ../mHome.py:277
+msgid "Currently Playing"
+msgstr "Läuft gerade"
 
 #: ../mHome.py:82
 msgid "Voted"
@@ -34,8 +38,3 @@ msgstr "Diesen Song mit einem zufälligen ersetzen"
 #: ../mHome.py:117
 msgid "Delete_Song"
 msgstr "Diesen Song aus der Liste löschen"
-
-#: ../mHome.py:277
-msgid "Currently Playing"
-msgstr "Läuft gerade"
-
